--- a/Dicloud/Base.lproj/Main.storyboard
+++ b/Dicloud/Base.lproj/Main.storyboard
@@ -141,13 +141,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oJP-ez-S4R">
-                                                    <rect key="frame" x="38" y="5" width="31" height="33"/>
+                                                    <rect key="frame" x="38" y="5" width="31" height="33.666666666666664"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="31" id="jQw-Pu-oyF"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a5k-So-fQM">
-                                                    <rect key="frame" x="77" y="11" width="298" height="21"/>
+                                                    <rect key="frame" x="77" y="11.000000000000002" width="298" height="21.666666666666671"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -657,13 +657,6 @@
                                 <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AnB-Fa-xaS" customClass="SSPaddingLabel" customModule="Dicloud" customModuleProvider="target">
-                                <rect key="frame" x="82" y="665" width="204" height="31"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.666015625" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M7I-H6-8QS">
                                 <rect key="frame" x="82" y="523" width="204" height="52"/>
                                 <color key="backgroundColor" red="0.0" green="0.46302481083637159" blue="0.81467896635198944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -692,10 +685,8 @@
                             <constraint firstItem="O76-BN-ibB" firstAttribute="centerX" secondItem="ICV-oJ-L8E" secondAttribute="centerX" constant="-3.5" id="5mb-hE-aR8"/>
                             <constraint firstItem="4fL-1o-GNu" firstAttribute="leading" secondItem="ICV-oJ-L8E" secondAttribute="leading" constant="82" id="856-bg-QqP"/>
                             <constraint firstItem="CoB-Wa-faq" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="344" id="9zR-wz-eW6"/>
-                            <constraint firstItem="AnB-Fa-xaS" firstAttribute="leading" secondItem="ICV-oJ-L8E" secondAttribute="leading" constant="82" id="BdR-l0-5aK"/>
                             <constraint firstItem="z9s-LO-krr" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="143" id="F3U-e8-qju"/>
                             <constraint firstItem="sV4-e4-2DO" firstAttribute="leading" secondItem="ICV-oJ-L8E" secondAttribute="leading" constant="82" id="F90-uY-HO7"/>
-                            <constraint firstItem="AnB-Fa-xaS" firstAttribute="height" secondItem="Rlp-vd-ilm" secondAttribute="height" id="Fmw-8v-bIw"/>
                             <constraint firstItem="atM-ra-QJE" firstAttribute="leading" secondItem="ICV-oJ-L8E" secondAttribute="leading" id="GoH-hh-HBN"/>
                             <constraint firstItem="CoB-Wa-faq" firstAttribute="leading" secondItem="ICV-oJ-L8E" secondAttribute="leading" constant="89" id="HUX-zp-kc1"/>
                             <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="sV4-e4-2DO" secondAttribute="trailing" constant="89" id="IN3-uY-Ff4"/>
@@ -704,12 +695,9 @@
                             <constraint firstItem="M7I-H6-8QS" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="479" id="P4U-dq-WS0"/>
                             <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="O76-BN-ibB" secondAttribute="trailing" constant="89" id="Uq3-w9-8XW"/>
                             <constraint firstItem="sV4-e4-2DO" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="224" id="Vq0-Wf-yam"/>
-                            <constraint firstItem="AnB-Fa-xaS" firstAttribute="width" secondItem="Rlp-vd-ilm" secondAttribute="width" id="YdK-kR-Q6Z"/>
                             <constraint firstItem="O76-BN-ibB" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="114" id="cIp-YT-7wF"/>
                             <constraint firstItem="sj6-OZ-HiX" firstAttribute="centerX" secondItem="ICV-oJ-L8E" secondAttribute="centerX" constant="-20" id="dRb-nz-zux"/>
-                            <constraint firstItem="AnB-Fa-xaS" firstAttribute="centerX" secondItem="ICV-oJ-L8E" secondAttribute="centerX" id="e9O-mq-tFy"/>
                             <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="CoB-Wa-faq" secondAttribute="trailing" constant="82" id="gFM-Uw-PdG"/>
-                            <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="AnB-Fa-xaS" secondAttribute="trailing" constant="89" id="hqa-l3-WQz"/>
                             <constraint firstItem="4fL-1o-GNu" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="249" id="kzo-Ts-Mwr"/>
                             <constraint firstItem="O76-BN-ibB" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="114" id="ogp-dj-OgD"/>
                             <constraint firstItem="atM-ra-QJE" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" id="owS-Oj-i6Q"/>
@@ -722,7 +710,6 @@
                         <viewLayoutGuide key="safeArea" id="ICV-oJ-L8E"/>
                     </view>
                     <connections>
-                        <outlet property="errorLabel" destination="AnB-Fa-xaS" id="Ohz-Cq-4FR"/>
                         <outlet property="nickLbl" destination="z9s-LO-krr" id="GsO-jU-3rg"/>
                         <outlet property="nickname" destination="O76-BN-ibB" id="cnz-t7-orH"/>
                         <outlet property="password" destination="CoB-Wa-faq" id="thV-Jo-9ZX"/>
@@ -847,6 +834,6 @@
         <segue reference="kqM-wB-Zzq"/>
         <segue reference="nvK-tH-cvI"/>
         <segue reference="tZU-ca-AIb"/>
-        <segue reference="6n4-lH-wgY"/>
+        <segue reference="2T0-5Y-lpd"/>
     </inferredMetricsTieBreakers>
 </document>
