--- a/Dicloud/Base.lproj/Main.storyboard
+++ b/Dicloud/Base.lproj/Main.storyboard
@@ -657,9 +657,13 @@
                                 <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M7I-H6-8QS">
-                                <rect key="frame" x="82" y="523" width="204" height="52"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M7I-H6-8QS">
+                                <rect key="frame" x="89" y="523" width="197" height="40"/>
                                 <color key="backgroundColor" red="0.0" green="0.46302481083637159" blue="0.81467896635198944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="AgD-sq-HNv"/>
+                                    <constraint firstAttribute="width" constant="197" id="I0o-xR-rBB"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Iniciar sesión">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -677,11 +681,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="M7I-H6-8QS" firstAttribute="centerX" secondItem="ICV-oJ-L8E" secondAttribute="centerX" id="1Ky-34-OdK"/>
                             <constraint firstItem="sj6-OZ-HiX" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="369" id="1Rd-3N-oob"/>
                             <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="sj6-OZ-HiX" secondAttribute="trailing" constant="129" id="22V-em-Hyk"/>
                             <constraint firstItem="sV4-e4-2DO" firstAttribute="centerX" secondItem="ICV-oJ-L8E" secondAttribute="centerX" constant="-3.5" id="2dO-lo-Kw8"/>
-                            <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="M7I-H6-8QS" secondAttribute="trailing" constant="89" id="3Z9-FL-qJh"/>
                             <constraint firstItem="O76-BN-ibB" firstAttribute="centerX" secondItem="ICV-oJ-L8E" secondAttribute="centerX" constant="-3.5" id="5mb-hE-aR8"/>
                             <constraint firstItem="4fL-1o-GNu" firstAttribute="leading" secondItem="ICV-oJ-L8E" secondAttribute="leading" constant="82" id="856-bg-QqP"/>
                             <constraint firstItem="CoB-Wa-faq" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="344" id="9zR-wz-eW6"/>
@@ -692,7 +694,6 @@
                             <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="sV4-e4-2DO" secondAttribute="trailing" constant="89" id="IN3-uY-Ff4"/>
                             <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="z9s-LO-krr" secondAttribute="trailing" constant="136" id="KCl-Eh-DSU"/>
                             <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="atM-ra-QJE" secondAttribute="trailing" id="O7M-d5-ghY"/>
-                            <constraint firstItem="M7I-H6-8QS" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="479" id="P4U-dq-WS0"/>
                             <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="O76-BN-ibB" secondAttribute="trailing" constant="89" id="Uq3-w9-8XW"/>
                             <constraint firstItem="sV4-e4-2DO" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="224" id="Vq0-Wf-yam"/>
                             <constraint firstItem="O76-BN-ibB" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="114" id="cIp-YT-7wF"/>
@@ -702,10 +703,12 @@
                             <constraint firstItem="O76-BN-ibB" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="114" id="ogp-dj-OgD"/>
                             <constraint firstItem="atM-ra-QJE" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" id="owS-Oj-i6Q"/>
                             <constraint firstItem="ICV-oJ-L8E" firstAttribute="trailing" secondItem="4fL-1o-GNu" secondAttribute="trailing" constant="136" id="qfq-do-NNj"/>
+                            <constraint firstItem="M7I-H6-8QS" firstAttribute="centerX" secondItem="ICV-oJ-L8E" secondAttribute="centerX" id="r2B-w1-lnw"/>
                             <constraint firstItem="O76-BN-ibB" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="114" id="s2i-Od-YEu"/>
                             <constraint firstItem="z9s-LO-krr" firstAttribute="leading" secondItem="ICV-oJ-L8E" secondAttribute="leading" constant="82" id="uFK-sO-ULi"/>
                             <constraint firstItem="sj6-OZ-HiX" firstAttribute="leading" secondItem="ICV-oJ-L8E" secondAttribute="leading" constant="89" id="vFq-NM-kkS"/>
                             <constraint firstItem="O76-BN-ibB" firstAttribute="leading" secondItem="ICV-oJ-L8E" secondAttribute="leading" constant="82" id="xQn-XJ-WPP"/>
+                            <constraint firstItem="M7I-H6-8QS" firstAttribute="top" secondItem="ICV-oJ-L8E" secondAttribute="top" constant="479" id="zzf-g8-4Di"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ICV-oJ-L8E"/>
                     </view>
@@ -738,15 +741,15 @@
                                         <rect key="frame" x="21" y="67" width="191" height="78"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JdX-7h-geM">
-                                        <rect key="frame" x="21" y="195" width="191" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5W5-3S-cTa">
+                                        <rect key="frame" x="21" y="166" width="191" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5W5-3S-cTa">
-                                        <rect key="frame" x="21" y="166" width="191" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JdX-7h-geM">
+                                        <rect key="frame" x="21" y="182" width="191" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -833,6 +836,6 @@
         <segue reference="kqM-wB-Zzq"/>
         <segue reference="nvK-tH-cvI"/>
         <segue reference="ka5-fb-KfB"/>
-        <segue reference="Tgm-BY-a8V"/>
+        <segue reference="2T0-5Y-lpd"/>
     </inferredMetricsTieBreakers>
 </document>
